06/15/2005 Trish Hartnett <trishah136@users.sourceforge.net>
	* Added tooltip texts for the checkboxes/scroll panes of the Options dialog box.

06/13/2005 Trish Hartnett <trishah136@users.sourceforge.net>

	* Added functionality to DocumentBuffer saveAs() method, so that the fileanme
	  of the file in the buffer (e.g. Untitled-1), is the filename which appears in 
	  the filename text field in the JFileChooser.
	* Added variable confirmClose into method signature of DocumentBuffer close() 
	  method. This variable is a flag. If it's set to true then the Dialog box 
	  "Untitled -1 unsaved! Save it now?" does appear, else the code sirectly skips 
	  to the DocumentBuffer save method. This was done because if a user clicks 
	  "Save Selected" on the DirtyFilesDialog then there is no need to pop up another
	  Dialog box saying "Untitled -1 unsaved! Save it now?", the user should instead 
	  be immeadiately shown the JFileChooser.
	* Changed method close in TabbedView. Previously this method called JSXE's 
	  closeDocumentBuffer() method. This caused a series of Save Dialog boxes 
	  (one for each unsaved edited file) to be produced. To get all the unsaved edited 
	  files to be displayed in one dialog box, the TabbedView close method was edited 
	  so that it creates an ArrayList of dirtyBuffers and these are sent as an argument 
	  to the DirtyFilesDialog constructor.
	* Further changed close method in TabbedView. Previously TabbedView.close() returned 
	  true to the JSXE exit method. This allowed the exit() method in JSXE to continue. 
	  I've changed TabbedView.close() so that it checks to see did the user select the 
	  Cancel button in DirtyFilesDialog. If the user did (cancelFlag = true), the close() 
	  method returns false to JSXE exit() method, causing the sequence of events required
	  for the editor to close down to stop.
	* Edited closeDocumentBuffer() method in JSXE. I wanted to be able to pass a boolean 