@@ -82,6 +82,7 @@ public class jsxeAboutDialog extends AbstractAction {
         "    Trish Hartnett <trishah136@users.sourceforge.net>\n"+
         "    Aaron Flatten  <aflatten@users.sourceforge.net>\n\n"+
         "Translators:\n"+
+        "    German (de) - Bianca Schoen\n"+
         "    Swedish (sv) - Patrik Johansson <patrikjj at users.sourceforge.net>\n\n"+
         "Past Contributers:\n"+
         "    Bilel Remmache <rbilel@users.sourceforge.net>\n"+
