@@ -1,3 +1,8 @@
+06/20/2005  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Added Bianca Schoen to the about dialog for her contribution of a German
+      translation.
+
 06/15/2005 Trish Hartnett <trishah136@users.sourceforge.net>
 	* Added tooltip texts for the checkboxes/scroll panes of the Options dialog box.
 
